--- a/index.html
+++ b/index.html
@@ -8,26 +8,38 @@
         <link rel="stylesheet" href="css/style.css">
         <title>Document</title>
     </head>
-        <body class="debug">
+        <body class="">
             <header>
                 <div class="container">
                     <div class="col-lg-12">
-                    
+                        <h1>Lezioni dove vuoi tu</h1>
                     </div>
                 </div>
                 <div class="container">
                     <div class="col-lg-6">
                         <div class="container">
-                            <div class="col-lg-12"></div>
-                            <div class="col-lg-6 col-lg-offset-3"></div>
-                            <div class="col-lg-12"></div>
+                            <div class="col-lg-5 col-lg-offset-3">
+                                <img src="img/icon/maps.png" alt="mappa">
+                            </div>
+                            <div class="col-lg-4 col-lg-offset-4">
+                                <h3>A casa tua</h3>
+                            </div>
+                            <div class="col-lg-12">
+                                <p> Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti </p>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="container">
-                            <div class="col-lg-12"></div>
-                            <div class="col-lg-6 col-lg-offset-3"></div>
-                            <div class="col-lg-12"></div>
+                            <div class="col-lg-7 col-lg-offset-2">
+                                <img src="img/icon/screen.png" alt="">
+                            </div>
+                            <div class="col-lg-4 col-lg-offset-4">
+                                <h3>Online</h3>
+                            </div>
+                            <div class="col-lg-12">
+                                <p>Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -35,30 +47,52 @@
             
             <main>
                 <div class="container">
-                    <div class="col-lg-12"></div>
+                    <div class="col-lg-12">
+                        <h1>Come Funziona</h1>
+                    </div>
                 </div>
 
                 <div class="container">
                     <div class="col-lg-4">
                         <div class="container">
-                            <div class="col-lg-12"></div>
-                            <div class="col-lg-6 col-lg-offset-3"></div>
-                            <div class="col-lg-12"></div>
+                            <div class="col-lg-7 col-lg-offset-3">
+                                <img src="img/search.svg" alt="">
+                            </div>
+                            <div class="col-lg-6 col-lg-offset-3">
+                                <h3>Cerca</h3>
+                            </div>
+                            <div class="col-lg-12">
+                                <p>Scrivi gratuitamente e senza impegno ai maestri che ti interessano e fai tutte le domande che vuoi!</p>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="container">
-                            <div class="col-lg-12"></div>
-                            <div class="col-lg-6 col-lg-offset-3"></div>
-                            <div class="col-lg-12"></div>
+                            <div class="col-lg-7 col-lg-offset-3">
+                                <img src="img/letter.svg" alt="">
+                            </div>
+                            <div class="col-lg-6 col-lg-offset-3">
+                                <h3>Contatta</h3>
+                            </div>
+                            <div class="col-lg-12">
+                                <p>Scrivi gratuitamente e senza impegno ai maestri che ti interessano e fai tutte le domande che vuoi!</p>
+                            </div>
                         </div>
                     </div>
+
                     <div class="col-lg-4">
                         <div class="container">
-                            <div class="col-lg-12"></div>
-                            <div class="col-lg-6 col-lg-offset-3"></div>
-                            <div class="col-lg-12"></div>
+                            <div class="col-lg-7 col-lg-offset-3">
+                                <img src="img/male.svg" alt="">
+                            </div>
+                            <div class="col-lg-6 col-lg-offset-3">
+                                <h3>Inizia a Suonare</h3>
+                            </div>
+                            <div class="col-lg-12">
+                                <p>Acquista un pacchetto di lezioni! Vuoi cambiare maestro? Le lezioni acquistate valgono con tutti i più di 1400 maestri Cademi!</p>
+                            </div>
                         </div>
+                    </div>
                     </div>
                 </div>
             </main>
