--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="container">
                     <div class="col-lg-6">
                         <div class="container">
-                            <div class="col-lg-5 col-lg-offset-3">
+                            <div class="col-lg-5 col-lg-offset-4">
                                 <img src="img/icon/maps.png" alt="mappa">
                             </div>
                             <div class="col-lg-4 col-lg-offset-4">
@@ -31,7 +31,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="container">
-                            <div class="col-lg-7 col-lg-offset-2">
+                            <div class="col-lg-7 col-lg-offset-3">
                                 <img src="img/icon/screen.png" alt="">
                             </div>
                             <div class="col-lg-4 col-lg-offset-4">
@@ -99,22 +99,42 @@
 
             <footer>
                 <div class="container">
-                    <div class="col-lg-12"></div>
-                    <div class="col-lg-6 col-lg-offset-3"></div>
-                    <div class="col-lg-6 col-lg-offset-3"></div>
-                    <div class="col-lg-12"></div>
+                    <div class="col-lg-12">
+                        <h1>Perchè Cademi</h1>
+                    </div>
+                    <div class="col-lg-6 col-lg-offset-5 blue-circle">
+                        <img src="img/icon/profile.png" alt="">
+                    </div>
+                    <div class="col-lg-6 col-lg-offset-3">
+                        <h3>Soddisfazione Garantita</h3>
+                    </div>
+                    <div class="col-lg-12">
+                        <p>Se non sei soddisfatto del tuo maestro, puoi cambiarlo senza costi aggiuntivi. Le lezioni acquistate su Cademi possono essere utilizzate con tutti i nostri maestri e il nostro team è sempre disponibile per darti un consiglio!</p>
+                    </div>
                 </div>
 
                 <div class="container">
-                    <div class="col-lg-6 col-lg-offset-3"></div>
-                    <div class="col-lg-6 col-lg-offset-3"></div>
-                    <div class="col-lg-12"></div>
+                    <div class="col-lg-6 col-lg-offset-5 blue-circle">
+                        <img src="img/icon/secure.png" alt="">
+                    </div>
+                    <div class="col-lg-6 col-lg-offset-3">
+                        <h3>Soddisfazione Garantita</h3>
+                    </div>
+                    <div class="col-lg-12">
+                        <p>Se non sei soddisfatto del tuo maestro, puoi cambiarlo senza costi aggiuntivi. Le lezioni acquistate su Cademi possono essere utilizzate con tutti i nostri maestri e il nostro team è sempre disponibile per darti un consiglio!</p>
+                    </div>
                 </div>
 
                 <div class="container">
-                    <div class="col-lg-6 col-lg-offset-3"></div>
-                    <div class="col-lg-6 col-lg-offset-3"></div>
-                    <div class="col-lg-12"></div>
+                    <div class="col-lg-6 col-lg-offset-5 blue-circle">
+                        <img src="img/icon/flex.png" alt="">
+                    </div>
+                    <div class="col-lg-6 col-lg-offset-3">
+                        <h3>Flessibile e Conveniente</h3>
+                    </div>
+                    <div class="col-lg-12">
+                        <p>Cademi non ha alcun costo d’iscrizione a differenza delle scuole di musica tradizionali. Inoltre, sei tu a scegliere dove fare lezione e gli orari delle tue lezioni.</p>
+                    </div>
                 </div>
             </footer>
         </body>
