--- a/index.html
+++ b/index.html
@@ -8,36 +8,36 @@
         <link rel="stylesheet" href="css/style.css">
         <title>Document</title>
     </head>
-        <body class="">
+        <body>
             <header>
                 <div class="container">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 col-md-12 col-xs-12">
                         <h1>Lezioni dove vuoi tu</h1>
                     </div>
                 </div>
                 <div class="container">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-6  col-xs-12 ">
                         <div class="container">
-                            <div class="col-lg-5 col-lg-offset-4">
+                            <div class="col-lg-5 col-lg-offset-4 col-md-5 col-md-offset-4 col-xs-5 col-xs-offset-4">
                                 <img src="img/icon/maps.png" alt="mappa">
                             </div>
-                            <div class="col-lg-4 col-lg-offset-4">
+                            <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-xs-4 col-xs-offset-4">
                                 <h3>A casa tua</h3>
                             </div>
-                            <div class="col-lg-12">
+                            <div class="col-lg-12 col-md-12 col-xs-12">
                                 <p> Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-6 col-xs-12">
                         <div class="container">
-                            <div class="col-lg-7 col-lg-offset-3">
+                            <div class="col-lg-7 col-lg-offset-3 col-md-7 col-md-offset-3 col-xs-7 col-xs-offset-3">
                                 <img src="img/icon/screen.png" alt="">
                             </div>
-                            <div class="col-lg-4 col-lg-offset-4">
+                            <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-xs-4 col-xs-offset-4">
                                 <h3>Online</h3>
                             </div>
-                            <div class="col-lg-12">
+                            <div class="col-lg-12 col-md-12 col-xs-12">
                                 <p>Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti</p>
                             </div>
                         </div>
@@ -47,48 +47,48 @@
             
             <main>
                 <div class="container">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 col-md-12 col-xs-12">
                         <h1>Come Funziona</h1>
                     </div>
                 </div>
 
                 <div class="container">
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-md-4 col-xs-12">
                         <div class="container">
-                            <div class="col-lg-7 col-lg-offset-3">
+                            <div class="col-lg-7 col-lg-offset-3 col-md-7 col-md-offset-3 col-xs-7 col-xs-offset-3">
                                 <img src="img/search.svg" alt="">
                             </div>
-                            <div class="col-lg-6 col-lg-offset-3">
+                            <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-xs-6 col-xs-offset-3">
                                 <h3>Cerca</h3>
                             </div>
-                            <div class="col-lg-12">
+                            <div class="col-lg-12 col-md-12 col-xs-12">
                                 <p>Scrivi gratuitamente e senza impegno ai maestri che ti interessano e fai tutte le domande che vuoi!</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-md-4 col-xs-12">
                         <div class="container">
-                            <div class="col-lg-7 col-lg-offset-3">
+                            <div class="col-lg-7 col-lg-offset-3 col-md-7 col-md-offset-3 col-xs-7 col-xs-offset-3">
                                 <img src="img/letter.svg" alt="">
                             </div>
-                            <div class="col-lg-6 col-lg-offset-3">
+                            <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-xs-6 col-xs-offset-3">
                                 <h3>Contatta</h3>
                             </div>
-                            <div class="col-lg-12">
+                            <div class="col-lg-12 col-md-12 col-xs-12">
                                 <p>Scrivi gratuitamente e senza impegno ai maestri che ti interessano e fai tutte le domande che vuoi!</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-md-4 col-xs-12">
                         <div class="container">
-                            <div class="col-lg-7 col-lg-offset-3">
+                            <div class="col-lg-7 col-lg-offset-3 col-md-7 col-md-offset-3 col-xs-7 col-xs-offset-3">
                                 <img src="img/male.svg" alt="">
                             </div>
-                            <div class="col-lg-6 col-lg-offset-3">
+                            <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-xs-6 col-xs-offset-3">
                                 <h3>Inizia a Suonare</h3>
                             </div>
-                            <div class="col-lg-12">
+                            <div class="col-lg-12 col-md-12 col-xs-12">
                                 <p>Acquista un pacchetto di lezioni! Vuoi cambiare maestro? Le lezioni acquistate valgono con tutti i più di 1400 maestri Cademi!</p>
                             </div>
                         </div>
@@ -99,41 +99,44 @@
 
             <footer>
                 <div class="container">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 col-md-12 col-xs-12">
                         <h1>Perchè Cademi</h1>
                     </div>
-                    <div class="col-lg-6 col-lg-offset-5 blue-circle">
+                    <div class="col-lg-6 col-lg-offset-5 col-md-6 col-md-offset-5 col-xs-6 col-xs-offset-3 blue-circle">
                         <img src="img/icon/profile.png" alt="">
                     </div>
-                    <div class="col-lg-6 col-lg-offset-3">
+                    <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-xs-7 col-xs-offset-3">
                         <h3>Soddisfazione Garantita</h3>
                     </div>
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 col-md-12 col-xs-12">
                         <p>Se non sei soddisfatto del tuo maestro, puoi cambiarlo senza costi aggiuntivi. Le lezioni acquistate su Cademi possono essere utilizzate con tutti i nostri maestri e il nostro team è sempre disponibile per darti un consiglio!</p>
+                        <hr>
                     </div>
                 </div>
 
                 <div class="container">
-                    <div class="col-lg-6 col-lg-offset-5 blue-circle">
+                    <div class="col-lg-6 col-lg-offset-5 col-md-6 col-md-offset-5 col-xs-6 col-xs-offset-3 blue-circle">
                         <img src="img/icon/secure.png" alt="">
                     </div>
-                    <div class="col-lg-6 col-lg-offset-3">
+                    <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-xs-7 col-xs-offset-3">
                         <h3>Soddisfazione Garantita</h3>
                     </div>
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 col-md-12 col-xs-12">
                         <p>Se non sei soddisfatto del tuo maestro, puoi cambiarlo senza costi aggiuntivi. Le lezioni acquistate su Cademi possono essere utilizzate con tutti i nostri maestri e il nostro team è sempre disponibile per darti un consiglio!</p>
+                        <hr>
                     </div>
                 </div>
 
                 <div class="container">
-                    <div class="col-lg-6 col-lg-offset-5 blue-circle">
+                    <div class="col-lg-6 col-lg-offset-5 col-md-6 col-md-offset-5 col-xs-6 col-xs-offset-3 blue-circle">
                         <img src="img/icon/flex.png" alt="">
                     </div>
-                    <div class="col-lg-6 col-lg-offset-3">
+                    <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-xs-7 col-xs-offset-3">
                         <h3>Flessibile e Conveniente</h3>
                     </div>
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 col-md-12 col-xs-12">
                         <p>Cademi non ha alcun costo d’iscrizione a differenza delle scuole di musica tradizionali. Inoltre, sei tu a scegliere dove fare lezione e gli orari delle tue lezioni.</p>
+                        <hr>
                     </div>
                 </div>
             </footer>
